git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "394fc0b"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "394fc0b"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Routine.pod
+++ b/perl6/doc/lib/Type/Routine.pod
@@ -162,11 +162,40 @@ say double 21;      # 42
 From inside another file you'd say C<use Foo;> to load a module and import the
 exported functions.
 
+=head2 trait is DEPRECATED
+
+    multi sub trait_mod:<is>(Routine:D $r, :$DEPRECATED!)
+
+Marks a routine as deprecated, optionally with a message what to use instead.
+
+This code
+
+=begin code
+sub f() is DEPRECATED('the literal 42') { 42 }
+say f();
+=end code
+
+produces this output:
+
+=begin code
+42
+Saw 1 call to deprecated code during execution.
+================================================================================
+Sub f (from GLOBAL) called at:
+  deprecated.p6, line 2
+Please use the literal 42 instead.
+--------------------------------------------------------------------------------
+Please contact the author to have these calls to deprecated code adapted,
+so that this message will disappear!
+
+Please note that *ALL* deprecated features will be removed at the release
+of Perl 6.0.0 (expected sometime in 2015).
+=end code
 
 =begin comment
 
 TODO: explain export tags
-TODO: traits hidden_from_backtrace, DEPRECATED
+TODO: traits hidden_from_backtrace
 
 =end comment
 
