git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "65c7cab"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "65c7cab"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Routine.pod
+++ b/perl6/doc/lib/Type/Routine.pod
@@ -202,10 +202,46 @@ Please note that *ALL* deprecated features will be removed at the release
 of Perl 6.0.0 (expected sometime in 2015).
 =end code
 
+=head2 trait is hidden_from_backtrace
+
+    multi sub trait_mod:<is>(Routine:D, :$hidden_from_backtrace!)
+
+Hides a routine from showing up in a default backtrace. For example
+
+=begin code
+sub inner { die "OH NOEZ" };
+sub outer { inner() };
+outer();
+=end code
+
+produces the error message and backtrace
+
+=begin code
+OH NOEZ
+  in sub inner at bt.p6:1
+  in sub outer at bt.p6:2
+  in block <unit> at bt.p6:3
+=end code
+
+but if C<inner> is marked with C<hidden_from_backtrace>
+
+=begin code
+sub inner is hidden_from_backtrace { die "OH NOEZ" };
+sub outer { inner() };
+outer();
+=end code
+
+the error backtrace does not show it:
+
+=begin code
+OH NOEZ
+  in sub outer at bt.p6:2
+  in block <unit> at bt.p6:3
+=end code
+
 =begin comment
 
 TODO: explain export tags
-TODO: traits hidden_from_backtrace
 
 =end comment
 
