git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "197d042"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "197d042"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/objects.pod
+++ b/perl6/doc/lib/Language/objects.pod
@@ -267,7 +267,40 @@ Submethods are useful for object construction and destruction tasks, as well
 as for tasks that are so specific to a certain type that subtypes must
 certainly override them.
 
-TODO: example
+For example the L<default method new|/type/Mu#method new> calls submethod
+C<BUILD> on each class in an L<inheritance|#Inheritance> chain:
+
+=begin code
+class Point2D {
+    has $.x;
+    has $.y;
+
+    submethod BUILD(:$!x, :$!y) {
+        say "Initializing Point2D";
+    }
+}
+
+class InvertiblePoint2D is Point2D {
+    submethod BUILD() {
+        say "Initializing InvertiblePoint2D";
+    }
+    method invert {
+        self.new(x => - $.x, y => - $.y);
+    }
+}
+
+say InvertiblePoint2D.new(x => 1, y => 2);
+=end code
+
+This produces the following output:
+
+=begin code
+Initializing Point2D
+Initializing InvertiblePoint2D
+InvertiblePoint2D.new(x => 1, y => 2)
+=end code
+
+See also: L<#Object Construction>.
 
 =head2 Inheritance
 
