git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "0951d69"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "0951d69"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -542,7 +542,7 @@ expect Pairs. However, this requires you to change all sub calls at once.
         # This version will check for unexpected arguments!
         ...
     }
-    get_the_loot( 'diamonds', quietlevel => 'very' ); # Throws error for mis-spelled parameter name
+    get_the_loot( 'diamonds', quietlevel => 'very' ); # Throws error for misspelled parameter name
 
 
 =head3 C<? :> Ternary operator
