--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -36,7 +36,7 @@ between the subroutine's name and its body, in parentheses:
     }
     exclaim "Howdy, World";
 
-By default, subroutines are L<lexically scoped|my>. That is
+By default, subroutines are L<lexically scoped|/syntax/my>. That is
 C<sub foo {...}> is the same as C<my sub foo {...}> and is only
 defined within the current scope.
 
@@ -209,7 +209,7 @@ subroutine that is returned uses it. By the time that the inner sub is called,
 C<generate-sub> has already exited. Yet the inner sub can still use C<$y>,
 because it I<closed> over the variable.
 
-A less obvious but useful example for closures is using L<map|/type/List#routine map>
+A less obvious but useful example for closures is using L<map|/type/List#routine_map>
 to multiply a list of numbers:
 
     my $multiply-by = 5;
