--- a/perl6/doc/lib/Language/grammars.pod
+++ b/perl6/doc/lib/Language/grammars.pod
@@ -10,7 +10,7 @@ data structures that have been created by interpreting that text.
 For example, Perl 6 is parsed and executed using a Perl 6-style grammar.
 
 An example that's more practical to the common Perl 6 user is the
-L<JSON::Simple module|https://github.com/moritz/json>, which can deserialize
+L<JSON::Tiny module|https://github.com/moritz/json>, which can deserialize
 any valid JSON file, however the deserializing code is written in less than
 100 lines of simple, extensible code.
 
@@ -75,7 +75,7 @@ into effect for the Regex:
 C<Grammar> is the superclass that classes automatically get when they are
 declared with the C<grammar> keyword instead of C<class>. Grammars should
 only be used to parse text; if you wish to extract complex data, an L<action
-class|/language/grammars#Action_Classes> is recommended to be used in
+object|/language/grammars#Action_Objects> is recommended to be used in
 conjunction with the grammar.
 
     =begin code :allow<B L>
@@ -206,7 +206,7 @@ say $match.made;    # 42
 =end code
 
 An instance of C<TestActions> is passed as named argument C<actions> to the
-L<parse|/type/Grammar|method parse> call, and when token C<TOP> has matched
+L<parse> call, and when token C<TOP> has matched
 successfully, it automatically calls method C<TOP>, passing the match object
 as an argument.
 
