--- a/perl6/doc/lib/Language/operators.pod
+++ b/perl6/doc/lib/Language/operators.pod
@@ -105,7 +105,7 @@ L<#prefix ...> etc. stub operators.
 
 
 Defining custom operators is covered in
-L</language/functions#Defining Operators>.
+L</language/functions#Defining_Operators>.
 
 =head1 Z<>Term Precedence
 
