--- a/perl6/doc/lib/Language/unicode_entry.pod
+++ b/perl6/doc/lib/Language/unicode_entry.pod
@@ -6,10 +6,10 @@
 
 Perl 6 allows the use of unicode characters as variable names.  Many
 operators are defined with unicode symbols (in particular the L<set/bag
-operators|\setsbagsmixes>) as well as some quoting constructs.  Hence it is
-good to know how to enter these symbols into editors, the Perl 6 shell and
-the command line, especially if the symbols aren't available as actual
-characters on a keyboard.
+operators|/language/setbagmix#Set%2FBag_Operators>) as well as some quoting
+constructs.  Hence it is good to know how to enter these symbols into editors,
+the Perl 6 shell and the command line, especially if the symbols aren't
+available as actual characters on a keyboard.
 
 General information about entering unicode under various operating systems
 and environments can be found on the Wikipedia L<unicode input
@@ -85,11 +85,11 @@ Thus constructs such as these are now possible:
 
 =head2 Set/bag operators
 
-The L<set/bag operators|/setbagmix> operators all have set-theory-related
-symbols, the unicode code points and their ascii equivalents are listed
-below.  To compose such a character, it is merely necessary to enter the
-character composition chord (e.g. C<Ctrl-V u> in Vim; C<Ctrl-Shift-u> in
-Bash) then the unicode code point hexadecimal number.
+The L<set/bag operators|/language/setbagmix#Set%2FBag_Operators> operators all
+have set-theory-related symbols, the unicode code points and their ascii 
+equivalents are listed below.  To compose such a character, it is merely
+necessary to enter the character composition chord (e.g. C<Ctrl-V u> in Vim;
+C<Ctrl-Shift-u> in Bash) then the unicode code point hexadecimal number.
 
 =begin table
     operator   unicode code point   ascii equivalent
