--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -240,9 +240,9 @@ with the element transformed through C<&mapper>;
     $double.tap(&say);
     $all.emit(4);           # 8
 
-=head2 method schedule_on
+=head2 method schedule-on
 
-    method schedule_on(Supply:D: $scheduler)
+    method schedule-on(Supply:D: $scheduler)
 
 Runs the emit, done and quit callbacks on the specified scheduler.
 
