--- a/perl6/doc/lib/Language/about.pod
+++ b/perl6/doc/lib/Language/about.pod
@@ -31,7 +31,7 @@ Generating this documentation requires:
 =item The Perl 6 modules Pod::To::HTML and URI::Escape (can be installed
 via L<panda|http://github.com/tadzik/panda>)
 
-=item B<Optional>: L<GraphViz|http://graphviz.com>, for creating graphs
+=item B<Optional>: L<GraphViz|http://graphviz.org>, for creating graphs
 of the relationships between Perl 6 types
 
 =item B<Optional>: L<Pygments|http://pygments.org>, for doing syntax
