git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "0fe9413"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "0fe9413"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Backtrace.pod
+++ b/perl6/doc/lib/Type/Backtrace.pod
@@ -28,7 +28,7 @@ backtrace.
     multi method Str(Backtrace:D:) returns Str:D:
 
 Returns a concise string representation of the backtrace, omitting
-routines marked as C<is hidden_from_backtrace>, and at the discretion of
+routines marked as C<is hidden-from-backtrace>, and at the discretion of
 the implementor, also some routines from the setting.
 
 =head2 method full
