--- a/perl6/doc/lib/Type/Backtrace/Frame.pod
+++ b/perl6/doc/lib/Type/Backtrace/Frame.pod
@@ -39,7 +39,7 @@ Returns the name of the enclosing subroutine.
     method is-hidden(Backtrace::Frame:D) return Bool:D
 
 Returns C<True> if the frame is marked as hidden with the
-C<is hidden_from_backtrace> trait.
+C<is hidden-from-backtrace> trait.
 
 =head2 method is-routine
 
