--- a/perl6/doc/lib/Type/Routine.pod
+++ b/perl6/doc/lib/Type/Routine.pod
@@ -202,9 +202,9 @@ Please note that *ALL* deprecated features will be removed at the release
 of Perl 6.0.0 (expected sometime in 2015).
 =end code
 
-=head2 trait is hidden_from_backtrace
+=head2 trait is hidden-from-backtrace
 
-    multi sub trait_mod:<is>(Routine:D, :$hidden_from_backtrace!)
+    multi sub trait_mod:<is>(Routine:D, :$hidden-from-backtrace!)
 
 Hides a routine from showing up in a default backtrace. For example
 
@@ -223,10 +223,10 @@ OH NOEZ
   in block <unit> at bt.p6:3
 =end code
 
-but if C<inner> is marked with C<hidden_from_backtrace>
+but if C<inner> is marked with C<hidden-from-backtrace>
 
 =begin code
-sub inner is hidden_from_backtrace { die "OH NOEZ" };
+sub inner is hidden-from-backtrace { die "OH NOEZ" };
 sub outer { inner() };
 outer();
 =end code
