--- a/perl6/doc/lib/Type/X/Anon/Augment.pod
+++ b/perl6/doc/lib/Type/X/Anon/Augment.pod
@@ -10,7 +10,7 @@ Compile time error thrown when trying to augment an anonymous package.
 
 For example
 
-    use MONKEY_TYPING;
+    use MONKEY-TYPING;
     augment class { }
 
 Dies with
