--- a/perl6/doc/lib/Type/X/Augment/NoSuchType.pod
+++ b/perl6/doc/lib/Type/X/Augment/NoSuchType.pod
@@ -10,7 +10,7 @@ Thrown when trying to augment a type which doesn't exist.
 
 For example
 
-    use MONKEY_TYPING;
+    use MONKEY-TYPING;
     augment class NoSuch { }
 
 dies with
