--- a/perl6/doc/lib/Type/X/Syntax/Augment/Role.pod
+++ b/perl6/doc/lib/Type/X/Syntax/Augment/Role.pod
@@ -10,7 +10,7 @@ Compile time error thrown when trying to augment a role.
 
 For example
 
-    use MONKEY_TYPING;
+    use MONKEY-TYPING;
     augment role Positional { }
 
 dies with
