--- a/perl6/doc/lib/Type/X/Syntax/Augment/WithoutMonkeyTyping.pod
+++ b/perl6/doc/lib/Type/X/Syntax/Augment/WithoutMonkeyTyping.pod
@@ -2,14 +2,14 @@
 
 =TITLE class X::Syntax::Augment::WithoutMonkeyTyping
 
-=SUBTITLE Compilation error due to augmenting a type without `MONKEY_TYPING`
+=SUBTITLE Compilation error due to augmenting a type without `MONKEY-TYPING`
 
     class X::Syntax::Augment::WithoutMonkeyTyping does X::Syntax { }
 
-Compile time error thrown when C<augment> is used without C<use MONKEY_TYPING>.
+Compile time error thrown when C<augment> is used without C<use MONKEY-TYPING>.
 
 Since C<augment> is considered a rather unsafe and impolate action, you have
-to pre-declare your intent with the C<use MONKEY_TYPING;> pragma.
+to pre-declare your intent with the C<use MONKEY-TYPING;> pragma.
 
 If you don't do that, for example
 
@@ -18,6 +18,6 @@ If you don't do that, for example
 you get the error
 
     ===SORRY!===
-    augment not allowed without 'use MONKEY_TYPING'
+    augment not allowed without 'use MONKEY-TYPING'
 
 =end pod
