git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "4d18abf"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "4d18abf"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -210,10 +210,10 @@ since the C<list> call.
 
 =head2 method interval
 
-    method interval(Supply:U: $interval, $offset = 0)
+    method interval(Supply:U: $interval, $delay = 0)
 
 Creates a new interval that fires an event every C<$interval> seconds,
-starting C<$offset> seconds from the call. The event payload is an integer,
+starting C<$delay> seconds from the call. The event payload is an integer,
 starting from 0 at the first event, and is increment by one for each event.
 
 =head2 method grep
