git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "de11df8"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "de11df8"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -286,7 +286,7 @@ Creates an on-demand supply from the elements passed to this method.
 
 =begin comment
 
-TODO: methods on_demand, flat
+TODO: methods on-demand, flat
 
 =end comment
 
