--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -55,12 +55,7 @@ to match a colon), or included in quotes:
 
     / 'two words' /     # matches 'two words' including the blank
     / "a:b"       /     # matches 'a:b' including the colon
-
-The hash character C<#> cannot be escaped with a backslash, because that
-collides with the I<unspace> syntax. So to match a hash character, you need
-to quote it:
-
-    /'#'/               # hashes must be quoted, cannot be escaped
+    / '#' /             # matches a hash character
 
 Strings are searched left to right for the regex, thus it is sufficient if a
 substring matches the regex:
@@ -74,8 +69,8 @@ substring matches the regex:
     };
 
 Match results are stored in the C<$/> variable and are also returned from
-the match. The result is of type L<Match> if the match was successful;
-otherwise it is L<Nil>.
+the match. The result is of L<type Match|/type/Match> if the match was successful;
+otherwise it is L<Nil|/type/Nil>.
 
 =head1 Wildcards and character classes
 
@@ -347,7 +342,7 @@ C<a ** 2..5> to match the character C<a> at least twice and at most 5 times.
 If the minimal and maximal number of matches are the same, a single integer
 is possible: C<a ** 5> matches C<a> exactly five times.
 
-=head2 X<Modified quantifier: %|regex,%>
+=head2 X<Modified quantifier: %|regex,%;regex,%%>
 
 To more easily match things like comma separated values, you can tack on a
 C<%> modifier to any of the above quantifiers to specify a separator than must
