git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "9292957"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "9292957"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -474,17 +474,20 @@ L<Match> objects instead.
 =head2 Capturing
 
 The round parentheses don't just group, they also I<capture>; that is, they
-make the string matched within the group available as a variable:
+make the string matched within the group available as a variable, and also as
+an element of the resulting L<Match|/type/Match> object:
 
     my $str =  'number 42';
     if $str ~~ /'number ' (\d+) / {
-        say "The number is $0";
+        say "The number is $0";         # the number is 42
+        # or
+        say "The number is $/[0]";      # the number is 42
     }
 
 Pairs of parentheses are numbered left to right, starting from zero.
 
     if 'abc' ~~ /(a) b (c)/ {
-        say "0: $0; 1: $1";     # 0: a; 1: c
+        say "0: $0; 1: $1";             # 0: a; 1: c
     }
 
 The C<$0> and C<$1> etc. syntax is actually just a shorthand; these captures
@@ -533,6 +536,19 @@ Example:
     if 'abc' ~~ /(x)(y) || (a)(.)(.)/ {
         say ~$1;            # b
     }
+
+If two (or more) alternations have a different number of captures,
+the one with the most captures determines the index of the next capture:
+
+=begin code
+$_ = 'abcd';
+
+if / a [ b (.) || (x) (y) ] (.) / {
+    #      $0     $0  $1    $2
+    say ~$2;            # d
+}
+=end code
+
 
 Captures can be nested, in which case they are numbered per level
 
