git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "1db56d7"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "1db56d7"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Any.pod
+++ b/perl6/doc/lib/Type/Any.pod
@@ -100,6 +100,19 @@ Interprets the invocant as a list, and returns the last index of that list.
     say 6.end;                      # 0
     say <a b c>.end;                # 2
 
+=head2 method pairup
+
+    method pairup() returns List
+
+Interprets the invocant as a list, and constructs a list of
+L<pairs|/type/Pair> from it, in the same way that assignment to a
+L<Hash|/type/Hash> does. That is, it takes two consecutive elements and
+construs a pair from them, unless the item in the key position already is a
+pair (in which case the pair is passed is passed through, and the next
+list item, if any, is considered to be a key again).
+
+    say (a => 1, 'b', 'c').pairup.perl;     # ("a" => 1, "b" => "c").list
+
 =head2 sub exit
 
     sub exit(Int() $status = 0)
