--- a/perl6/doc/lib/Type/PairMap.pod
+++ b/perl6/doc/lib/Type/PairMap.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Ordered Hash with a frozen key set
 
-    class PairMap odes Associative does Positional { ... }
+    class PairMap does Associative does Positional { ... }
 
 A C<PairMap> is an ordered hash or dictionary where only the values can be
 changed, and the set of keys is immutable.
