--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -347,6 +347,16 @@ L<umask|http://en.wikipedia.org/wiki/Umask>).
 Throws an exception of type L<X::IO::Mkdir|/type/X::IO::Mkdir> if the
 directory cannot be created.
 
+=head2 sub rmdir
+
+    sub rmdir($dir as IO --> Bool) is export
+
+Remove the given directory if it is empty.
+
+Returns C<True> on success.  Throws an exception of type
+L<X::IO::Rmdir|/type/X::IO::Rmdir> if the directory cannot be removed (e.g.
+the directory is not empty, or the path is not a directory).
+
 =head2 sub run
 
     sub run(*@args ($, *@)) returns Proc::Status:D
