git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "88dd3a4"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "88dd3a4"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -6,7 +6,7 @@
 
     role IO { }
 
-The IO role provides no functionality itself, and moreso just marks if a
+The IO role provides no functionality itself; it simply marks that a
 particular object relates to input/output.
 
 =head1 Routines
@@ -105,9 +105,9 @@ module|http://perldoc.perl.org/Data/Dumper.html>.
 
     sub prompt($msg)
 
-Prints C<$msg> to the standard output and waits
-for the user to type in something and finish with an ENTER.
-Returns the string typed in without the trailing newline.
+Prints C<$msg> to standard output and waits for the user to type something
+and finish with an ENTER.  Returns the string typed in without the trailing
+newline.
 
     my $name = prompt("Hi, what's your name? ");
 
@@ -116,8 +116,8 @@ Returns the string typed in without the trailing newline.
     my $fh = open(IO::Path() $path, :$r, :$w, :$a, :$rw,
                   :$bin, :$enc, :$nl, :$chomp)
 
-Opens the C<$path> (by default in text mode) with the
-given options, returning an L<IO::Handle> object.
+Opens the C<$path> (by default in text mode) with the given options,
+returning an L<IO::Handle> object.
 
 =head3 File mode options
 
@@ -179,7 +179,7 @@ is C<False>, implying text semantics.
 
 =item text mode encoding, C<:enc>
 
-Encoding to use if opened in text mode.
+The encoding to use if opened in text mode.
 
     # open explicitly as utf8
     my $fh = open("path/to/file", enc => "utf8");
@@ -242,13 +242,13 @@ contents are actually written to the file.
 
     sub dir(Cool $path = '.', Mu :$test = none('.', '..'))
 
-Returns a list of L<IO::File> and L<IO::Path> objects for the
-files and directories found in the $path. If $path is not given
-assumes the current directory.
+Returns a list of L<IO::File> and L<IO::Path> objects for the files and
+directories found in the C<$path>. If C<$path> is not given assumes the
+current directory.
 
-A second optional parameter can be given that will be
-matched against the strings to filter out certain entries.
-By default it filters out the '.' and '..' entries.
+A second optional parameter can be given that will be matched against the
+strings to filter out certain entries.  By default it filters out the '.'
+and '..' entries.
 
 Examples:
 
@@ -262,7 +262,7 @@ To include all the entries (including . and ..) write:
 
     dir(test => all())
 
-To include only entries with a .pl extension write:
+To include only entries with a C<.pl> extension write:
 
     dir(test => /.pl$/)
 
@@ -296,7 +296,7 @@ either be a string or an C<IO::Path> object).  To write to an C<IO::Handle>,
 use the L<print> method.
 
 If a file needs to be opened for writing, it will also be C<close>d.  Returns
-True on success, or the appropriate C<Failure> if something went wrong.
+C<True> on success, or the appropriate C<Failure> if something went wrong.
 
 These named parameters are optional and only have meaning if the first
 positional parameter was B<not> an C<IO::Handle>:
@@ -376,7 +376,7 @@ other shenanigans. See L<shell|/type/IO#sub_shell> if you want that.
     sub shell($cmd) returns Proc::Status:D
 
 Runs a command through the system shell. All shell meta characters are
-interpreted by the shell, inluding pipes, redirects, environment variable
+interpreted by the shell, including pipes, redirects, environment variable
 substitutions and so on. See L<run|/type/IO#sub_run> if you don't want that.
 
 The return value is of L<type Proc::Status|/type/Proc::Status>.
