git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "f64f3cf"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "f64f3cf"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/glossary.pod
+++ b/perl6/doc/lib/Language/glossary.pod
@@ -40,6 +40,19 @@ C<f(1|2|3)> call to be internally executed as C<f(1)|f(2)|f(3)>, and the
 resulting junction is C<2|4|6>. This process of separating junction
 arguments into multiple calls to a function is called I<autothreading>.
 
+=head1 Constraint
+
+Constraints are a restriction placed on acceptable types for a parameter
+or subset type.  They are introduced with the word C<where>.  In the
+following example, a constraint is used to make sure an error occurs if
+anyone ever calls a subroutine named C<abbreviate> with a string which is
+shorter than 10 characters:
+
+    sub abbreviate (Str $thing where { .chars >= 10 }) { ... }
+
+The C<Str> in the above example is also a constraint, but is usually
+referred to as a "type constraint."
+
 =head1 Instance
 
 An I<instance> of a class is also called an I<object> in some other
