--- a/perl6/doc/lib/Type/Pair.pod
+++ b/perl6/doc/lib/Type/Pair.pod
@@ -26,6 +26,16 @@ The immutable version of a C<Pair> is an C<Enum>.
 
 =head1 Methods
 
+=head2 method antipair
+
+    method antipair() returns Pair:D
+
+Returns a new C<Pair> object with key and value exchanged.
+
+    my $p = (6 => 'Perl').antipair;
+    say $p.key;         # Perl
+    say $p.value;       # 6
+
 =head2 method value
 
     multi method value(Pair:D:) is rw
