git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "23135c0"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "23135c0"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -175,9 +175,9 @@ If you want that behavior, consider using L<comb> instead.
 Examples:
 
     say split(';', "a;b;c").perl;          # ("a", "b", "c").list
-    say split(';', "a;b;c", :all).perl;    # ("a", ";", "b", ";", "c").list
+    say split(';', "a;b;c", :all).perl;    # (("a", ";"), ("b", ";"), "c").list
     say split(';', "a;b;c", 2).perl;       # ("a", "b;c").list
-    say split(';', "a;b;c", 2, :all).perl; #("a", ";", "b;c").list
+    say split(';', "a;b;c", 2, :all).perl; # (("a", ";"), "b;c").list
 
     say split(';', "a;b;c,d").perl;        # ("a", "b", "c,d").list
     say split(/\;/, "a;b;c,d").perl;       # ("a", "b", "c,d").list
