git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "91cbe6d"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "91cbe6d"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/5to6.pod
+++ b/perl6/doc/lib/Language/5to6.pod
@@ -616,9 +616,36 @@ outer block, not the inner.)
 The C<unless> conditional only allows for a single block in Perl 6;
 it does not allow for an C<elsif> or C<else> clause.
 
-=head4 C<given> C<when>
+=head4 C<given>-C<when>
 
-XXX TODO
+The C<given>-C<when> construct is like a chain of C<if>-C<elsif>-C<else>
+statements or like the C<switch>-C<case> construct in e.g. C.  It has the
+general structure:
+
+    given EXPR {
+        when EXPR { ... }
+        when EXPR { ... }
+        default { ... }
+    }
+
+In its simplest form, the construct is as follows:
+
+    given $value {
+        when "a match" {
+            do-something();
+        }
+        when "another match" {
+            do-something-else();
+        }
+        default {
+            do-default-thing();
+        }
+    }
+
+This is simple in the sense that a scalar value is matched in the C<when>
+statements.  More generally, the matches are actually smart-matches on the
+input value such that lookups using more complex entities such as regexps
+can be used instead of scalar values.
 
 See also the warnings on the smart-match op above.
 
