--- a/perl6/doc/lib/Type/Any.pod
+++ b/perl6/doc/lib/Type/Any.pod
@@ -107,7 +107,7 @@ Interprets the invocant as a list, and returns the last index of that list.
 Interprets the invocant as a list, and constructs a list of
 L<pairs|/type/Pair> from it, in the same way that assignment to a
 L<Hash|/type/Hash> does. That is, it takes two consecutive elements and
-construs a pair from them, unless the item in the key position already is a
+constructs a pair from them, unless the item in the key position already is a
 pair (in which case the pair is passed is passed through, and the next
 list item, if any, is considered to be a key again).
 
@@ -122,3 +122,5 @@ Exits the current process with return code C<$status>.
 =comment TODO maybe find a better place to document &exit
 
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
